<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/default_margin">

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:text="@string/app_version"
        android:textSize="@dimen/title_text"
        android:layout_marginVertical="@dimen/small_margin"
        android:textStyle="bold"
        android:clickable="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_marginVertical="@dimen/small_margin"
        android:text="@string/app_developer"
        android:textSize="@dimen/title_text"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:layout_marginVertical="@dimen/small_margin"
        android:text="@string/developer_email"
        android:textSize="@dimen/title_text"
        android:textStyle="bold"/>

</LinearLayout>