<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@android:color/holo_blue_bright"
            app:titleTextColor="@color/white"
            app:title="@string/add_note_description_content"
            app:menu="@menu/appbar_menu"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/hint_title"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/default_text"
            android:inputType="text"/>

        <EditText
            android:id="@+id/noteDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/hint_details"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/default_text"
            android:inputType="textMultiLine" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>